connect issues: pairs, but has issues with Tx/Rx characteristics; Currently debugging send and recieve "infoRequest"/"infoResponse"

--- a/webBLE/index.html
+++ b/webBLE/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en-US">
     
     <head>
@@ -18,4 +18,22 @@
         <script src="scripts/BLE_V2.js"> </script>
     </body>
 
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SPIKE Prime Send&Receive Test</title>
+</head>
+<body>
+    <h1>Upload Program to SPIKE Prime</h1>
+    <button id="connect-button">Connect to SPIKE</button>
+    <!-- <input type="file" id="file-input" />
+    <button id="upload-button" disabled>Upload File</button> -->
+    <div id="status"></div>
+    <button id="send-receive">Test Message Send and Response</button>
+    <script src="scripts/BLE_V2.js"></script>
+</body>
 </html>
