--- a/webBLE/index.html
+++ b/webBLE/index.html
@@ -32,7 +32,10 @@
     <button id="connect-button">Connect to SPIKE</button>
     <!-- <input type="file" id="file-input" />
     <button id="upload-button" disabled>Upload File</button> -->
-    <div id="status"></div>
+    <button id="check-uuid-button" disabled>Check for Service UUID</button>
+    <div id="status"> Status: Disconnected </div>
+    <div id="device-uuid">Device UUID: Not connected</div>
+    <div id="service-uuid">Service UUID: Not connected</div>
     <button id="send-receive">Test Message Send and Response</button>
     <script src="scripts/BLE_V2.js"></script>
 </body>
